- Tidied up a bit - Completed tasks now shown without restarting app - Added image to main page (landscape mode looks really good) - Changed journal to only display duration if duration > 0 - Moved textviews around in journal, exercise and meditation
Need to
- adjust constraints for task (for landscape)

--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -6,41 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.rossg_000.fyp_v3.Tasks">
 
-    <!--
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="70dp"
-        android:layout_height="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Tasks"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <ListView
-        android:id="@+id/taskListView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        />
-    -->
-
     <Button
         android:id="@+id/toStretches"
         android:layout_width="250dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:onClick="goToStretches"
@@ -54,7 +24,7 @@
         android:id="@+id/toExercise"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:onClick="goToExercise"
@@ -68,7 +38,7 @@
         android:id="@+id/toMeditation"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:onClick="goToMeditation"
@@ -102,25 +72,28 @@
         android:id="@+id/TimeDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="50dp"
-        android:text="00:00:00:00"
+        android:text="00:00:00"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/toStretches"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
-        android:text="Timer"
+        android:text="Timer:"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="30dp"
-        app:layout_constraintEnd_toStartOf="@+id/TimeDisplay"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
