--- a/app/src/main/res/layout/journal_list_items.xml
+++ b/app/src/main/res/layout/journal_list_items.xml
@@ -24,8 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="25dp"
-        android:text="Level"
+        android:layout_marginTop="45dp"
+        android:text="Level:"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="45dp"
         android:text="TextView"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="45dp"
         android:text="Attempt:"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="45dp"
         android:text="TextView"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
@@ -68,83 +68,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/JournalTaskAction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="45dp"
-        android:text="Ran"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/JournalTaskProgress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="45dp"
-        android:text="20"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="15dp"
-        app:layout_constraintStart_toEndOf="@+id/JournalTaskAction"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/JournalTaskMeasurement"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="45dp"
-        android:text="miles"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="15dp"
-        app:layout_constraintStart_toEndOf="@+id/JournalTaskProgress"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/JournalForString"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="45dp"
-        android:text="for"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="15dp"
-        app:layout_constraintStart_toEndOf="@+id/JournalTaskMeasurement"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/JournalDuration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="45dp"
-        android:text="20"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="15dp"
-        app:layout_constraintStart_toEndOf="@+id/JournalForString"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/JournalTimeMeasurement"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="45dp"
-        android:text="minutes"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="15dp"
-        app:layout_constraintStart_toEndOf="@+id/JournalDuration"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/JournalLevelUpOrDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="85dp"
         android:text="TextView"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
@@ -156,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="25dp"
         android:text="Time:"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
@@ -168,7 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="25dp"
         android:text="TextView"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
@@ -180,7 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="25dp"
         android:text="Date:"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
@@ -192,10 +120,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="25dp"
         android:text="TextView"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
         app:layout_constraintStart_toEndOf="@+id/JournalDateString"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/ProgressString"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="65dp"
+        android:text="TextView"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="15dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
