--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,5 +92,17 @@
         app:layout_constraintBottom_toTopOf="@+id/MeditationsCompleted"
         app:layout_constraintStart_toEndOf="@+id/ExercisesCompletedString" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="280dp"
+        android:layout_height="310dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/mountain_range" />
+
 
 </android.support.constraint.ConstraintLayout>
