--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -10,7 +10,7 @@
         android:id="@+id/taskName"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="@android:color/holo_blue_dark"
@@ -22,13 +22,11 @@
         android:id="@+id/taskRequirementInteger"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="25dp"
-        app:layout_constraintEnd_toStartOf="@+id/taskRequirementString"
         app:layout_constraintStart_toEndOf="@+id/taskName"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,60 +34,58 @@
         android:id="@+id/taskRequirementString"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/taskRequirementInteger"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/taskLevelString"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:text="Level:"
         android:textColor="@android:color/holo_red_light"
         android:textSize="20dp"
-        android:text="Level:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskName" />
 
     <TextView
         android:id="@+id/taskLevelInteger"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="5dp"
         android:text="TextView"
         android:textColor="@android:color/holo_red_light"
         android:textSize="20dp"
-        app:layout_constraintStart_toEndOf="@+id/taskLevelString"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskName" />
 
     <TextView
         android:id="@+id/Attempts"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
         android:text="TextView"
         android:textColor="@android:color/holo_red_light"
         android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskRequirementString" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskLevelInteger" />
 
     <TextView
         android:id="@+id/AttemptString"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:text="Attempt:"
         android:textColor="@android:color/holo_red_light"
         android:textSize="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/Attempts"
-        app:layout_constraintTop_toBottomOf="@+id/taskRequirementString" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskLevelString" />
 
 </android.support.constraint.ConstraintLayout>
