--- a/app/src/main/res/layout/stretches_list_items.xml
+++ b/app/src/main/res/layout/stretches_list_items.xml
@@ -13,6 +13,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Stretch"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
