--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_background_image"
     tools:context="com.example.rossg_000.fyp_v3.MainActivity">
 
     <Button
@@ -12,7 +13,6 @@
         android:layout_height="80dp"
         android:layout_marginBottom="60dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginStart="50dp"
         android:onClick="goToPage"
         android:text="Tasks"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +24,6 @@
         android:layout_width="125dp"
         android:layout_height="80dp"
         android:layout_marginBottom="60dp"
-        android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:onClick="goToJournal"
         android:text="Journal"
@@ -32,77 +31,109 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:text="@string/button_to_journal" />
 
-    <TextView
-        android:id="@+id/CompletedTasksString"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:layout_marginBottom="150dp"
-        android:layout_marginStart="8dp"
-        android:text="Tasks Completed:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/CompletedTasks"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:layout_marginBottom="150dp"
-        android:layout_marginStart="44dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/CompletedTasksString" />
-
-    <TextView
-        android:id="@+id/MeditationsCompletedString"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Meditations Completed:"
-        app:layout_constraintBottom_toTopOf="@+id/CompletedTasksString"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="150dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/ExercisesCompletedString"
+        <TextView
+            android:id="@+id/CompletedTasksString"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tasks"
+            android:textSize="20dp"
+            android:paddingBottom="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <TextView
+            android:id="@+id/CompletedTasks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/CompletedTasksString" />
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Exercises Completed:"
-        app:layout_constraintBottom_toTopOf="@+id/MeditationsCompletedString"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginEnd="50dp"
+        android:layout_marginTop="250dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/MeditationsCompleted"
+        <TextView
+            android:id="@+id/MeditationsCompletedString"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Meditation"
+            android:textSize="20dp"
+            android:paddingBottom="10dp"
+            tools:layout_editor_absoluteX="50dp"
+            tools:layout_editor_absoluteY="399dp" />
+
+        <TextView
+            android:id="@+id/MeditationsCompleted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="20dp"
+            tools:layout_editor_absoluteX="140dp"
+            tools:layout_editor_absoluteY="399dp" />
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/CompletedTasks"
-        app:layout_constraintStart_toEndOf="@+id/MeditationsCompletedString" />
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="250dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/ExercisesCompleted"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="22dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/MeditationsCompleted"
-        app:layout_constraintStart_toEndOf="@+id/ExercisesCompletedString" />
+        <TextView
+            android:id="@+id/ExercisesCompletedString"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Exercise"
+            android:textSize="20dp"
+            android:paddingBottom="10dp"
+            tools:layout_editor_absoluteX="50dp"
+            tools:layout_editor_absoluteY="372dp" />
+
+        <TextView
+            android:id="@+id/ExercisesCompleted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="20dp"
+            tools:layout_editor_absoluteX="140dp"
+            tools:layout_editor_absoluteY="372dp" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="280dp"
-        android:layout_height="310dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/mountain_range" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
 
 </android.support.constraint.ConstraintLayout>
