--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@android:color/background_dark"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@android:color/background_dark"
         android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/taskName"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +37,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@android:color/background_dark"
         android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/taskRequirementInteger"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +49,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="Level:"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_dark"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskName" />
@@ -61,7 +61,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="5dp"
         android:text="TextView"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_dark"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskName" />
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:text="TextView"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_dark"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskLevelInteger" />
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="Attempt:"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_dark"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskLevelString" />
