Changed some colours

--- a/app/src/main/res/layout/activity_complete_or_fail.xml
+++ b/app/src/main/res/layout/activity_complete_or_fail.xml
@@ -59,7 +59,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="120dp"
         android:text="Progress made:"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@android:color/white"
         android:textSize="15dp"
         app:layout_constraintEnd_toStartOf="@+id/NumberInput"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:text="Time spent (Minutes):"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@android:color/white"
         android:textSize="15dp"
         app:layout_constraintEnd_toStartOf="@+id/DurationInput"
         app:layout_constraintStart_toStartOf="parent"
