--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tasks"
+            android:textColor="@android:color/white"
             android:textSize="20dp"
             android:paddingBottom="10dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -57,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
+            android:textColor="@android:color/white"
             android:textSize="20dp"
             app:layout_constraintTop_toBottomOf="@+id/CompletedTasksString" />
     </LinearLayout>
@@ -77,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Meditation"
+            android:textColor="@android:color/white"
             android:textSize="20dp"
             android:paddingBottom="10dp"
             tools:layout_editor_absoluteX="50dp"
@@ -87,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
+            android:textColor="@android:color/white"
             android:textSize="20dp"
             tools:layout_editor_absoluteX="140dp"
             tools:layout_editor_absoluteY="399dp" />
@@ -108,6 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Exercise"
+            android:textColor="@android:color/white"
             android:textSize="20dp"
             android:paddingBottom="10dp"
             tools:layout_editor_absoluteX="50dp"
@@ -118,6 +123,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
+            android:textColor="@android:color/white"
             android:textSize="20dp"
             tools:layout_editor_absoluteX="140dp"
             tools:layout_editor_absoluteY="372dp" />
