--- a/app/src/main/res/layout/stretches_list_items.xml
+++ b/app/src/main/res/layout/stretches_list_items.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Stretch"
-        android:textColor="@android:color/holo_blue_light"
+        android:textColor="@android:color/white"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
