--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,9 +4,24 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
 
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">#502020</item>
+
+        <!--
+        <item name="colorPrimary">#011530</item>
+        <item name="colorPrimaryDark">#05224C</item>
         <item name="colorAccent">#FFff0000</item>
+        -->
+
+        <!--
+        <item name="colorPrimary">#011530</item>
+        <item name="colorPrimaryDark">#02193a</item>
+        <item name="colorAccent">#FFff0000</item>
+        -->
+
+        <item name="colorPrimary">#011530</item>
+        <item name="colorPrimaryDark">#02193a</item>
+        <item name="colorAccent">#FFff0000</item>
+
+
 
         <!--
         <item name="colorPrimary">@color/colorPrimary</item>
