--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,10 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="125dp"
-        android:layout_height="80dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginBottom="60dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="25dp"
         android:onClick="goToPage"
         android:text="Tasks"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,16 +21,32 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="125dp"
-        android:layout_height="80dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginBottom="60dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="25dp"
         android:onClick="goToJournal"
         android:text="Journal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:text="@string/button_to_journal" />
 
+    <Button
+        android:id="@+id/buttonRewards"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:onClick="goToRewards"
+        android:text="Rewards"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Rewards" />
+
+
+    <!--
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,8 +78,9 @@
             android:textSize="20dp"
             app:layout_constraintTop_toBottomOf="@+id/CompletedTasksString" />
     </LinearLayout>
+    -->
 
-
+    <!--
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -129,6 +146,8 @@
             tools:layout_editor_absoluteY="372dp" />
     </LinearLayout>
 
+    -->
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
@@ -140,6 +159,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="120dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/YouAreString"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:text="You Are"
+            android:textColor="@android:color/white"
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <TextView
+            android:id="@+id/UserTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@android:color/white"
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/YouAreString" />
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/ExerciseProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="103dp"
+        android:layout_height="97dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
