--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -316,7 +316,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="invisible"
-                app:srcCompat="@drawable/circle" />
+                app:srcCompat="@drawable/trophy" />
         </FrameLayout>
     </LinearLayout>
 
