--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/app_background_image"
     tools:context="com.example.rossg_000.fyp_v3.MainActivity">
 
+    <!--
     <Button
         android:id="@+id/button4"
         android:layout_width="90dp"
@@ -44,6 +45,47 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Rewards" />
+     -->
+
+    <ImageButton
+        android:id="@+id/toTasksButton"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginStart="25dp"
+        android:onClick="goToPage"
+        android:src="@drawable/checklist"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/toRewardsButton"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:onClick="goToRewards"
+        android:src="@drawable/trophy_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/toJournalButton"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="25dp"
+        android:onClick="goToJournal"
+        android:src="@drawable/journal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+
+
+
 
 
     <!--
@@ -193,7 +235,7 @@
             app:layout_constraintTop_toBottomOf="@+id/YouAreString" />
     </LinearLayout>
 
-
+    <!--
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -319,10 +361,7 @@
                 app:srcCompat="@drawable/trophy" />
         </FrameLayout>
     </LinearLayout>
-
-
-
-
+    -->
 
     <!--
     <ImageView
