- Implemented light sensor   -) has basic ui display - needs improvement - implemented accelerometer   -) used to check angle of phone   -) basic display on main page (need to move to exercise)   -) improve to check angle of user

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -235,6 +235,36 @@
             app:layout_constraintTop_toBottomOf="@+id/YouAreString" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/XCo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="250dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/YCo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/XCo" />
+
+    <TextView
+        android:id="@+id/ZCo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/YCo" />
+
     <!--
     <LinearLayout
         android:layout_width="wrap_content"
